[Dope] Added members-only inidicator to posts, fixed author spacing

--- a/packages/dope/assets/css/blog/post.css
+++ b/packages/dope/assets/css/blog/post.css
@@ -25,6 +25,13 @@
     text-transform: lowercase;
 }
 
+.post-meta svg {
+    position: relative;
+    top: 3px;
+    width: 16px;
+    height: 16px;
+}
+
 .post-meta-item + .post-meta-item::before {
     padding: 0 8px 0 4px;
     font-family: serif;
